re-write service tests and write tests for controllers