@@ -1,26 +1,24 @@
 package com.mktekhub.inventory.service;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
-
-import com.mktekhub.inventory.model.InventoryItem;
-import com.mktekhub.inventory.model.StockActivity;
-import com.mktekhub.inventory.model.Warehouse;
+import com.mktekhub.inventory.model.*;
 import com.mktekhub.inventory.repository.InventoryItemRepository;
 import com.mktekhub.inventory.repository.StockActivityRepository;
 import com.mktekhub.inventory.repository.WarehouseRepository;
-
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.List;
-
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+
+import java.math.BigDecimal;
+import java.nio.charset.StandardCharsets;
+import java.time.LocalDateTime;
+import java.util.Arrays;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class ReportServiceTest {
@@ -37,150 +35,273 @@ class ReportServiceTest {
     @InjectMocks
     private ReportService reportService;
 
-    private InventoryItem item;
     private Warehouse warehouse;
+    private InventoryItem item1;
+    private InventoryItem item2;
     private StockActivity activity;
+    private User user;
 
     @BeforeEach
     void setUp() {
+        // Setup warehouse
         warehouse = new Warehouse();
         warehouse.setId(1L);
         warehouse.setName("Test Warehouse");
-        warehouse.setLocation("Test Location");
-        warehouse.setMaxCapacity(new BigDecimal("1000.00"));
-        warehouse.setCurrentCapacity(new BigDecimal("500.00"));
-        warehouse.setCapacityAlertThreshold(new BigDecimal("80.00"));
+        warehouse.setLocation("New York");
+        warehouse.setMaxCapacity(new BigDecimal("10000"));
+        warehouse.setCurrentCapacity(new BigDecimal("5000"));
         warehouse.setIsActive(true);
+        warehouse.setCapacityAlertThreshold(new BigDecimal("80"));
         warehouse.setCreatedAt(LocalDateTime.now());
 
-        item = new InventoryItem();
-        item.setId(1L);
-        item.setSku("TEST-001");
-        item.setName("Test Item");
-        item.setCategory("Test Category");
-        item.setQuantity(100);
-        item.setReorderLevel(10);
-        item.setWarehouse(warehouse);
+        // Setup items
+        item1 = new InventoryItem();
+        item1.setId(1L);
+        item1.setSku("SKU001");
+        item1.setName("Item 1");
+        item1.setCategory("Electronics");
+        item1.setBrand("Brand A");
+        item1.setQuantity(100);
+        item1.setUnitPrice(new BigDecimal("10.00"));
+        item1.setReorderLevel(20);
+        item1.setWarehouse(warehouse);
 
+        item2 = new InventoryItem();
+        item2.setId(2L);
+        item2.setSku("SKU002");
+        item2.setName("Item 2");
+        item2.setCategory("Clothing");
+        item2.setBrand("Brand B");
+        item2.setQuantity(15);
+        item2.setUnitPrice(new BigDecimal("25.00"));
+        item2.setReorderLevel(20);
+        item2.setWarehouse(warehouse);
+
+        // Setup user
+        user = new User();
+        user.setId(1L);
+        user.setUsername("testuser");
+
+        // Setup activity
         activity = new StockActivity();
         activity.setId(1L);
-        activity.setItemSku("TEST-001");
-        activity.setItem(item);
-        activity.setActivityType(com.mktekhub.inventory.model.ActivityType.ADJUSTMENT);
+        activity.setItem(item1);
+        activity.setItemSku("SKU001");
+        activity.setActivityType(ActivityType.ADJUSTMENT);
+        activity.setQuantityChange(10);
+        activity.setPreviousQuantity(90);
+        activity.setNewQuantity(100);
         activity.setTimestamp(LocalDateTime.now());
-        activity.setPerformedBy(new com.mktekhub.inventory.model.User());
+        activity.setPerformedBy(user);
+        activity.setNotes("Test activity");
     }
 
     @Test
-    void testExportInventoryToCSV_ReturnsByteArray() {
+    void exportInventoryToCSV_GeneratesValidCSV() {
         // Arrange
-        when(inventoryItemRepository.findAll()).thenReturn(Arrays.asList(item));
+        when(inventoryItemRepository.findAll()).thenReturn(Arrays.asList(item1, item2));
+
+        // Act
+        byte[] result = reportService.exportInventoryToCSV();
+        String csv = new String(result, StandardCharsets.UTF_8);
+
+        // Assert
+        assertNotNull(result);
+        assertTrue(csv.contains("SKU,Name,Category"));
+        assertTrue(csv.contains("SKU001"));
+        assertTrue(csv.contains("SKU002"));
+        assertTrue(csv.contains("Item 1"));
+        assertTrue(csv.contains("Electronics"));
+        verify(inventoryItemRepository).findAll();
+    }
+
+    @Test
+    void exportWarehousesToCSV_GeneratesValidCSV() {
+        // Arrange
+        when(warehouseRepository.findAll()).thenReturn(List.of(warehouse));
+
+        // Act
+        byte[] result = reportService.exportWarehousesToCSV();
+        String csv = new String(result, StandardCharsets.UTF_8);
+
+        // Assert
+        assertNotNull(result);
+        assertTrue(csv.contains("Name,Location,Max Capacity"));
+        assertTrue(csv.contains("Test Warehouse"));
+        assertTrue(csv.contains("New York"));
+        verify(warehouseRepository).findAll();
+    }
+
+    @Test
+    void exportStockActivitiesToCSV_GeneratesValidCSV() {
+        // Arrange
+        when(stockActivityRepository.findAll()).thenReturn(List.of(activity));
+
+        // Act
+        byte[] result = reportService.exportStockActivitiesToCSV();
+        String csv = new String(result, StandardCharsets.UTF_8);
+
+        // Assert
+        assertNotNull(result);
+        assertTrue(csv.contains("Timestamp,Item SKU,Item Name"));
+        assertTrue(csv.contains("SKU001"));
+        assertTrue(csv.contains("ADJUSTMENT"));
+        verify(stockActivityRepository).findAll();
+    }
+
+    @Test
+    void generateStockValuationReport_CalculatesTotalValue() {
+        // Arrange
+        when(inventoryItemRepository.findAll()).thenReturn(Arrays.asList(item1, item2));
+
+        // Act
+        byte[] result = reportService.generateStockValuationReport();
+        String csv = new String(result, StandardCharsets.UTF_8);
+
+        // Assert
+        assertNotNull(result);
+        assertTrue(csv.contains("SKU,Name,Category,Warehouse,Quantity,Unit Price,Total Value"));
+        assertTrue(csv.contains("TOTAL VALUE"));
+        // item1: 100 * 10 = 1000, item2: 15 * 25 = 375, total = 1375
+        assertTrue(csv.contains("1375"));
+        verify(inventoryItemRepository).findAll();
+    }
+
+    @Test
+    void generateLowStockReport_FilterslowStockItems() {
+        // Arrange
+        when(inventoryItemRepository.findAll()).thenReturn(Arrays.asList(item1, item2));
+
+        // Act
+        byte[] result = reportService.generateLowStockReport();
+        String csv = new String(result, StandardCharsets.UTF_8);
+
+        // Assert
+        assertNotNull(result);
+        assertTrue(csv.contains("SKU,Name,Category,Warehouse,Current Quantity,Reorder Level"));
+        // item2 has quantity 15, reorder level 20, so it should be in the report
+        assertTrue(csv.contains("SKU002"));
+        assertTrue(csv.contains("LOW STOCK"));
+        // item1 has quantity 100, reorder level 20, so it should NOT be in the report
+        assertFalse(csv.contains("SKU001,Item 1"));
+        verify(inventoryItemRepository).findAll();
+    }
+
+    @Test
+    void generateWarehouseUtilizationReport_ShowsUtilization() {
+        // Arrange
+        when(warehouseRepository.findAll()).thenReturn(List.of(warehouse));
+
+        // Act
+        byte[] result = reportService.generateWarehouseUtilizationReport();
+        String csv = new String(result, StandardCharsets.UTF_8);
+
+        // Assert
+        assertNotNull(result);
+        assertTrue(csv.contains("Warehouse,Location,Max Capacity,Current Capacity"));
+        assertTrue(csv.contains("Test Warehouse"));
+        assertTrue(csv.contains("Active"));
+        verify(warehouseRepository).findAll();
+    }
+
+    @Test
+    void generateStockMovementReport_SortsActivitiesByTimestamp() {
+        // Arrange
+        StockActivity activity2 = new StockActivity();
+        activity2.setId(2L);
+        activity2.setItem(item2);
+        activity2.setItemSku("SKU002");
+        activity2.setActivityType(ActivityType.TRANSFER);
+        activity2.setQuantityChange(5);
+        activity2.setTimestamp(LocalDateTime.now().plusHours(1));
+        activity2.setPerformedBy(user);
+
+        when(stockActivityRepository.findAll()).thenReturn(Arrays.asList(activity, activity2));
+
+        // Act
+        byte[] result = reportService.generateStockMovementReport();
+        String csv = new String(result, StandardCharsets.UTF_8);
+
+        // Assert
+        assertNotNull(result);
+        assertTrue(csv.contains("Date,Time,Activity Type,Item SKU"));
+        assertTrue(csv.contains("ADJUSTMENT"));
+        assertTrue(csv.contains("TRANSFER"));
+        verify(stockActivityRepository).findAll();
+    }
+
+    @Test
+    void generateInventorySummaryByCategory_GroupsByCategory() {
+        // Arrange
+        when(inventoryItemRepository.findAll()).thenReturn(Arrays.asList(item1, item2));
+
+        // Act
+        byte[] result = reportService.generateInventorySummaryByCategory();
+        String csv = new String(result, StandardCharsets.UTF_8);
+
+        // Assert
+        assertNotNull(result);
+        assertTrue(csv.contains("Category,Total Items,Total Quantity,Total Value"));
+        assertTrue(csv.contains("Electronics"));
+        assertTrue(csv.contains("Clothing"));
+        verify(inventoryItemRepository).findAll();
+    }
+
+    @Test
+    void escapeCsv_HandlesSpecialCharacters() {
+        // Arrange
+        InventoryItem itemWithComma = new InventoryItem();
+        itemWithComma.setSku("SKU003");
+        itemWithComma.setName("Item, with comma");
+        itemWithComma.setCategory("Test");
+        itemWithComma.setQuantity(10);
+        itemWithComma.setUnitPrice(new BigDecimal("5.00"));
+        itemWithComma.setWarehouse(warehouse);
+
+        when(inventoryItemRepository.findAll()).thenReturn(List.of(itemWithComma));
+
+        // Act
+        byte[] result = reportService.exportInventoryToCSV();
+        String csv = new String(result, StandardCharsets.UTF_8);
+
+        // Assert
+        assertNotNull(result);
+        assertTrue(csv.contains("\"Item, with comma\""));
+    }
+
+    @Test
+    void exportInventoryToCSV_HandlesNullValues() {
+        // Arrange
+        InventoryItem itemWithNulls = new InventoryItem();
+        itemWithNulls.setSku("SKU003");
+        itemWithNulls.setName("Item 3");
+        itemWithNulls.setQuantity(10);
+        itemWithNulls.setWarehouse(warehouse);
+        // category, brand, unitPrice are null
+
+        when(inventoryItemRepository.findAll()).thenReturn(List.of(itemWithNulls));
 
         // Act
         byte[] result = reportService.exportInventoryToCSV();
 
         // Assert
         assertNotNull(result);
-        assertTrue(result.length > 0);
-        verify(inventoryItemRepository, times(1)).findAll();
+        String csv = new String(result, StandardCharsets.UTF_8);
+        assertTrue(csv.contains("SKU003"));
     }
 
     @Test
-    void testExportWarehousesToCSV_ReturnsByteArray() {
+    void generateStockValuationReport_HandlesNullPrices() {
         // Arrange
-        when(warehouseRepository.findAll()).thenReturn(Arrays.asList(warehouse));
-
-        // Act
-        byte[] result = reportService.exportWarehousesToCSV();
-
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.length > 0);
-        verify(warehouseRepository, times(1)).findAll();
-    }
-
-    @Test
-    void testExportStockActivitiesToCSV_ReturnsByteArray() {
-        // Arrange
-        when(stockActivityRepository.findAll()).thenReturn(Arrays.asList(activity));
-
-        // Act
-        byte[] result = reportService.exportStockActivitiesToCSV();
-
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.length > 0);
-        verify(stockActivityRepository, times(1)).findAll();
-    }
-
-    @Test
-    void testGenerateLowStockReport_ReturnsByteArray() {
-        // Arrange
-        item.setQuantity(5); // Below reorder level
-        when(inventoryItemRepository.findAll()).thenReturn(Arrays.asList(item));
-
-        // Act
-        byte[] result = reportService.generateLowStockReport();
-
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.length > 0);
-        verify(inventoryItemRepository, times(1)).findAll();
-    }
-
-    @Test
-    void testGenerateStockValuationReport_ReturnsByteArray() {
-        // Arrange
-        when(inventoryItemRepository.findAll()).thenReturn(Arrays.asList(item));
+        item1.setUnitPrice(null);
+        when(inventoryItemRepository.findAll()).thenReturn(List.of(item1));
 
         // Act
         byte[] result = reportService.generateStockValuationReport();
+        String csv = new String(result, StandardCharsets.UTF_8);
 
         // Assert
         assertNotNull(result);
-        assertTrue(result.length > 0);
-        verify(inventoryItemRepository, times(1)).findAll();
-    }
-
-    @Test
-    void testGenerateWarehouseUtilizationReport_ReturnsByteArray() {
-        // Arrange
-        when(warehouseRepository.findAll()).thenReturn(Arrays.asList(warehouse));
-
-        // Act
-        byte[] result = reportService.generateWarehouseUtilizationReport();
-
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.length > 0);
-        verify(warehouseRepository, times(1)).findAll();
-    }
-
-    @Test
-    void testGenerateStockMovementReport_ReturnsByteArray() {
-        // Arrange
-        when(stockActivityRepository.findAll()).thenReturn(Arrays.asList(activity));
-
-        // Act
-        byte[] result = reportService.generateStockMovementReport();
-
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.length > 0);
-        verify(stockActivityRepository, times(1)).findAll();
-    }
-
-    @Test
-    void testGenerateInventorySummaryByCategory_ReturnsByteArray() {
-        // Arrange
-        when(inventoryItemRepository.findAll()).thenReturn(Arrays.asList(item));
-
-        // Act
-        byte[] result = reportService.generateInventorySummaryByCategory();
-
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.length > 0);
-        verify(inventoryItemRepository, times(1)).findAll();
+        assertTrue(csv.contains("0.00")); // Should use 0 for null price
     }
 }
